--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 New[[:space:]]folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
+3D[[:space:]]Models/New[[:space:]]folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
