--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 New[[:space:]]folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
 3D[[:space:]]Models/New[[:space:]]folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
+3D[[:space:]]Models/Lincoln[[:space:]]3D[[:space:]]Model/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
