--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-3D[[:space:]]Models/Lincoln[[:space:]]3D[[:space:]]Model/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
+3D Models/3D Lincoln Model/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
