--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 3D[[:space:]]Models/Lincoln[[:space:]]3D[[:space:]]Model/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
+Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
