--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX filter=lfs diff=lfs merge=lfs -text
+Lincoln-Navigator-2016.FBX filter=lfs diff=lfs merge=lfs -text
