--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^4.0.0"
   }
 }
-
