--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
-    "jwt-decode": "^4.0.0"
+    "http-proxy-middleware": "^2.0.6"  
   }
 }
