--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"  
+    "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
