--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.5.3",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "jsonfile": "^6.1.0"
   }
 }
